# yarix_x_yarix

my_project/: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  depcomp  hehe.txt  install-sh  missing  my_project  test-driver
my_project/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
my_project/docs/: manual.txt
my_project/scripts/: my_script.sh
my_project/src/: main.cpp
my_project/tests/: test_main.cpp
